2nd training/Community/Community/Community1/force-app/main/default/objects/Costing_Sheet_Category__c/Costing_Sheet_Category__c.object-meta.xml
<CustomObject>
    <label>Costing Sheet Category</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costing Sheet Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>