2nd training/Community/Community/Community1/force-app/main/default/objects/Costing_Sheet_Category__c/fields/Category_Id__c.field-meta.xml
<CustomField>
    <fullName>Category_Id__c</fullName>
    <externalId>true</externalId>
    <label>Category Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>