2nd training/Community/Community/Community1/force-app/main/default/objects/Costing_Sheet_Category__c/fields/Costing_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Costing_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Costing Sheet</label>
    <referenceTo>Costing_Sheet__c</referenceTo>
    <relationshipLabel>Costing Sheet Categories</relationshipLabel>
    <relationshipName>Costing_Sheet_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>